PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Drop auto-compare sub-command since currently buggy / too server resource intensive

Phoronix Test Suite 9.2.0 Milestone 1
17 October 2019

pts-core: New possible external dependencies for gflags, clang, uuid, tclsh
pts-core: External dependencies updates for Windows
pts-core: Crash fix for macOS in regression from PTS 9.0.1 launcher change

Phoronix Test Suite 9.0.1-Asker
1 October 2019

pts-core: Fatal error fix for old PHP5 versions (RHEL 7) with pts_openbenchmarking_upload crash
pts-core: Set AllowResultUploadsToOpenBenchmarking = FALSE in enterprise-setup
ob_auto_compare: Show "since [date]" as part of the inline box plot
ob_auto_compare: Various tweaks/styling improvements to the inline box-plot display
phodevi: New cpu.peak-freq sensor for reporting just the highest CPU core frequency at that moment

Phoronix Test Suite 9.0.0-Asker
16 September 2019

pts-core: Add stress-batch-run sub-command for behavior like stress-run but no prompts for test options
pts-core: Allow plotting all individual run results as a line graph
pts-core: Allow showing pie charts of wins/losses of tests
pts-core: Add support for showing "new + updated tests" via the invalid command helper
pts-core: Allow accessing the new result viewer via localhost too rather than just 127.0.0.1
pts_Graph: Restore pie chart support from PTS 6.0 state when dropped

Phoronix Test Suite 9.0.0 Milestone 3
3 September 2019

pts-core: Add AllowResultUploadsToOpenBenchmarking user config option
pts-core: Split OpenBenchmarking.org upload code into pts_openbenchmarking_upload file and allow it to be removed if wanting to strip out upload support
pts-core: Add "ob-cache" local cache of tests/suites to help offline use-cases
pts-core: Add hdf5 to the external dependency list
pts-core: Add libxml2 to the external dependency list

Phoronix Test Suite 9.0.0 Milestone 2
22 August 2019

pts-core: New result viewer improvements