@@ -61,6 +61,8 @@
 <p>This is similar to the FORCE_TIMES_TO_RUN option but will only be used if the test profile's run count is less than this defined value.</p>
 <p><strong>FORCE_MIN_TIMES_TO_RUN_CUTOFF</strong></p>
 <p>When used in conjunction with FORCE_MIN_TIMES_TO_RUN, the override value will only be applied to test profiles where its average run-time length (in minutes) is less than the value specified by FORCE_MIN_TIMES_TO_RUN_CUTOFF.</p>
+<p><strong>FORCE_MIN_DURATION_PER_TEST</strong></p>
+<p>This is similar  to FORCE_MIN_TIMES_TO_RUN but allows specifying a time (in minutes) that each test should be run for. Each test will loop at least until that amount of time has elapsed. This can be useful for short-running tests if wanting to ensure each test is run long enough to rule out system noise.</p>
 <p><strong>IGNORE_RUNS</strong></p>
 <p>IGNORE_RUNS can be passed a comma-separated list of runs to skip on each benchmark. For example, IGNORE_RUNS=1 would always drop the first run from being recorded.</p>
 <p><strong>NO_FILE_HASH_CHECKS</strong></p>
