@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Drop auto-compare sub-command since currently buggy / too server resource intensive
+pts-core: Add FORCE_MIN_DURATION_PER_TEST
 
 Phoronix Test Suite 9.2.0 Milestone 1
 17 October 2019
